# azure-genesys-audiohook

./: README.md
.github/: CODEOWNERS
.github/workflows/: package-server.yml  test.yml
infra/: main.bicep  main.parameters.json
infra/modules/: cognitive.bicep  containerapp.bicep  keyvault.bicep
server/python/: .env.sample  README.md  pyproject.toml  server.py
server/python/app/: models.py  websocket_server.py
server/python/app/events/: event_publisher.py
server/python/app/handler/: health_handler.py  media_handler.py  message_handler.py  session_manager.py
server/python/app/language/: agent_assist.py  config.yaml
server/python/app/speech/: azure_ai_speech_provider.py  azure_openai_gpt4o_transcriber.py  speech_provider.py
server/python/app/storage/: base_conversation_store.py  cosmos_db_conversation_store.py  in_memory_conversation_store.py
server/python/app/utils/: auth.py  event_entity_builder.py  helpers.py  identity.py
server/python/tests/: conftest.py  test_dummy_server.py  test_server.py  test_websocket_server.py
